# bitacora

./: .dockerignore  .gitignore  Bitacora.postman_collection.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eth_bitacora.abi  provisional_build.rs
contracts/: .dockerignore  .gitignore  Dockerfile  README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: Bitacora.sol
contracts/scripts/: deploy.ts
contracts/test/: Bitacora.ts
devnet/: Dockerfile  init.sh
devnet/validator/: genesis.json
devnet/validator/keystore/: UTC--2024-05-18T09-09-25.083136251Z--60f2c193181490aa621249f9185717d58f3347da  UTC--2024-05-18T09-12-28.685172211Z--3bc5c917c3035e7f9561c983343fd2663d88c47a
src/: cli_args.rs  configuration.rs  main.rs
src/common/: bytes.rs  merkle.rs  mod.rs  prelude.rs
src/handlers/: errors.rs  get_dataset.rs  get_device.rs  get_flight_data.rs  mod.rs  post_device.rs  post_flight_data.rs  post_verify_flight_data.rs
src/state/: bitacora.rs  entities.rs  errors.rs  mod.rs  tests.rs
src/storage/: errors.rs  in_memory.rs  mod.rs  redis.rs  storage.rs  tests.rs
src/storage/redis_script/: new_flight_data.lua
src/web3/: ethereum.rs  mod.rs  stub.rs  tests.rs  traits.rs
verify-portal/: Dockerfile  package-lock.json  package.json
verify-portal/src/: App.css  App.js  QueryResult.js
