[package]
name = "bitacora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
axum-macros = "0.3.8"
bs58 = "0.5.0"
ethers = { version = "2.0.10", features = ["solc"] }
foundry-compilers = { git = "https://github.com/foundry-rs/compilers" }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = { version = "1.0.105" }
sha2 = "0.10.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
