[package]
name = "bitacora"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["full"] }
async-trait = "0.1.74"
axum = "0.6.19"
axum-macros = "0.3.8"
base64 = "0.21.5"
bs58 = "0.5.0"
clap = { version = "4.4.12", features = ["derive"] }
hex = "0.4.3"
once_cell = "1.10.0"
p256 = "0.13.2"
rand = "0.8.5"
redis = "0.24.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = { version = "1.0.105" }
sha2 = "0.10.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
# Need the following to have Anvil in tests
alloy = { version = "0.1", features = ["full", "node-bindings"] } 
